syntax = "proto3";

package goph_keeper;

import "google/protobuf/timestamp.proto";

// import path of the package which will contain all the generated code for this file
option go_package = "github.com/aridae/goph-keeper/pkg/pb/goph-keeper/secret;gophkeepersecret";

// Сервис для работы с данными: хранение, синхронизация, передача, создание, редактирование, удаление
service SecretsService {
  // Создание новой записи данных
  rpc CreateSecret(CreateSecretRequest) returns (CreateSecretResponse);

  // Редактирование существующей записи данных
  rpc UpdateSecret(UpdateSecretRequest) returns (UpdateSecretResponse);

  // Удаление записи данных
  rpc DeleteSecret(DeleteSecretRequest) returns (DeleteSecretResponse);

  // Запрос передачи приватных данных владельцу
  rpc GetSecret(GetSecretRequest) returns (GetSecretResponse);
}


message Secret {
  string key = 1;
  bytes data = 2;
  map<string,string> meta = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message CreateSecretRequest {
  string key = 1;
  bytes data = 2;
  map<string,string> meta = 3;
}

message CreateSecretResponse {}

message UpdateSecretRequest {
  string key = 1;
  optional bytes data_patch = 2;
  optional MetaPatch meta_patch = 3;

  message MetaPatch {
    map<string,string> meta = 1;
  }
}

message UpdateSecretResponse {}

message DeleteSecretRequest {
  string key = 1;
}

message DeleteSecretResponse {}

message GetSecretRequest {
  string key = 1;
}

message GetSecretResponse {
  Secret secret = 1;
}